--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extra-arraysort",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "A sorting algorithm puts elements of an array in a certain order.",
   "main": "index.js",
   "module": "index.mjs",
@@ -23,7 +23,10 @@
   "keywords": [
     "extra",
     "array",
-    "sort"
+    "sort",
+    "bubbleSort",
+    "insertionSort",
+    "selectionSort"
   ],
   "author": "wolfram77@gmail.com",
   "license": "MIT",
